--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,29 +11,21 @@
   }
 }
 
-
-html,
-body {
+* {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+}
+
+body,
+html{
   font-family: 'Inter', sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-}
 
-@font-face{
-  font-family: "burtons";
-  src: url("../public/Burtons.otf");
-}
 
-@font-face{
-  font-family: 'gotham';
-  src: url("../public/Gotham-Bold.otf")
 
-}
 
-.logo{
-  font-family: 'gotham', 'Inter', sans-serif;
-}
+
+
