--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -25,4 +26,8 @@ html {
 p {
   font-family: sans-serif;
   font-weight: 500;
+}
+
+.source-sans {
+  font-family: "Source Sans 3", sans-serif;
 }
